updated css and html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a class="nav-link" href="#">WHAT WE DO <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">WHO WE ARE</a>
+        <a class="nav-link navcolor" href="#">WHO WE ARE</a>
       </li>
       <li class="nav-item">
             <a class="nav-link" href="#">UPFRONT PRICING</a>
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#">OUR PROCESS</a>
       </li>
       <li class="nav-item">
-            <a class="nav-link" href="#">TIPS AND IDEAS</a>
+            <a class="nav-link navcolor" href="#">TIPS AND IDEAS</a>
       </li>
       <li class="nav-item">
             <a class="nav-link" href="#">CONTACT US</a>
@@ -56,62 +56,62 @@
 </nav>
     <!-- header? -->
     <header>
-        <img src="./luca-bravo-lWAOc0UuJ-A-unsplash.jpg">
-        <section class='hero-header-text'>
+        <img src="./tyssul-patel-o-zOatT4kQw-unsplash.jpg" class="headerimg">
+        <section class='hero-header-text' >
             <h1 class="bg-text-1">hygge house</h1>
             <h2 class="bg-text">A North Carolina Video Production House</h2>
-            <button id="startBtn" class="btn btn-lg btn-warning">Let's Chat</button>
         </section>
     </header>
 
-    <!-- Pin section -->
-    <!-- <div class="bg-text-1">
-        <p class="intro-text-1">We create and deliver video concepts <br> that have purpose and value.</p>
-    </div>
-    <div class="bg-text">
-        <p class="p-text tracking-in-expand">Ready to get started?</p>
-        <button id="startBtn" class="btn btn-lg btn-warning">Let's Chat</button>
-    </div>
 
-    </div> -->
-
-    <!-- <div class="container-fluid">
-        <div class="row">
-            <p class="projects">Our projects</p>
-        </div>
-    </div> -->
-
-
-    <div class="container">
+    <div class="container bg-colortwo">
         <!-- row one -->
         <div class="row">
             <div class="col-md-12">
-                <div class="intro">What's Hygge House?</div>
+                <div class="intro">---------  Hygge  ---------</div>
+                <div class="sub-heading">(hoo-guh)</div>
+                <p> If you are not familiar with the Danish word "hygge", let us fill you in on what it is, without a doubt, our favorite word.</p>
+                <p>There is not direct English translation for "hygge", but in a few words , it means to be comfortable, cozy, and content. We like to describe it as a perfect conditions that come naturally. Think of
+                    those special feelings that you only get from sitting around the campfire in the mountains on a clear night, pouring over a great book on an unexpected snow day, or dinner with friends that made for the 
+                    perfect evening. It's the sense of everything feeling just right, and you are exactly where you want to be.
+                </p>
+                <p>
+                    This is how we want you to feel working with Hygge House. With our level of expertise, creativity, flexibility, and positive attitude, and we bring to all of our projects all the necessary elements to create that hygge feeling.
+                </p>
+                <p>
+                    Our recipe is simple, we create and deliver video concepts that have purpose and value. With our upfront and transparent approach to pricing, direction, and process, we can promise that we are 
+                    not going to be like that random friend of a friend that shows up and make everything awkward. 
+                </p>
+                <p>
+                    We hope that you will feel hygge working with us, doing what we truly love.
+                </p>
             </div>
         </div>
 
         <!-- row two -->
-        <div class="row d-flex justify-content-between">
-            <div class="col-md-3 card">
-                <i class="fas fa-dollar-sign fa-3x iconStyle"></i>
-                <div class="container">
-                    <h4><b>Transparent</b></h4>
-                    <p>With our upfront and transparent approach to pricing, direction, and process, we can promise we are not going to be like that random friend of a friend that shows up and makes everythig awkward.</p>
+        <div class="row d-flex">
+            <div class="col-3 card cardOne" style="width: 18rem;">
+                <img class="card-img-top" src="./denis-kirichenko-CAOMmLlQAOs-unsplash.jpg" alt="Card image cap">
+                <div>
+                    <h4 class="textoverlayone"><b>WHAT WE DO</b></h4>
                 </div>
             </div>
-            <div class="col-md-3 card">
-                <i class="fas fa-user-tie fa-3x iconStyle"></i>
+            <div class="col-3 card cardTwo">
+                <img src="./hugo-villegas-xvY3zEBk0Ic-unsplash.jpg"></img>
                 <div class="container">
-                    <h4><b>Expertise</b></h4>
-                    <p>With us you will experience a high level of expertise, flexibility, creativity and a positive attitude.</p>
-
+                    <h4 class="textoverlaytwo"><b>WHO WE ARE</b></h4>
                 </div>
             </div>
-            <div class="col-md-3 card">
-                <i class="fas fa-map-marked fa-3x iconStyle"></i>
+            <div class="col-3 card cardThree">
+                <img src="./paper-beard-0l0yzOD1ZDI-unsplash.jpg"></img>
                 <div class="container">
-                    <h4><b>Humor</b></h4>
-                    <p>Humor is an essential way that we communicate. We are friendly, smart, but never too serious. We are creative, not corporate. </p>
+                    <h4 class="textoverlaythree"><b>UPFRONT PRICING</b></h4>
+                </div>
+            </div>
+            <div class="col-3 card cardFour">
+                <img src="./ales-krivec-DgtRKZOOE0w-unsplash.jpg"></img>
+                <div class="container">
+                    <h4 class="textoverlayfour"><b>OUR PROCESS</b></h4>
                 </div>
 
             </div>
@@ -140,27 +140,6 @@
         </div>
     </div>
 
-    <!-- card/inner div -->
-    <div class="container-fluid searchBox secondary-bg-color">
-        <div>
-            <p class="intro">Let's become friends</p>
-            <p class="sub-heading">Don't be shy, I promise we're friendly.<br> We hope that you will feel hygge working with us, doing what we truly love. </p>
-        </div>
-
-        <!-- text input -->
-        <form id="target">
-            <div>
-                <input class="inputHolder" id="cityInput" type="text" placeholder="First name"></input><br>
-                <input class="inputHolder" id="stateInput" type="text" placeholder="Last name"></input><br>
-                <input class="inputHolder" id="stateInput" type="text" placeholder="Email"></input>
-                <input type="submit" style="display: none" />
-            </div>
-
-            <button class="btn btn-lg btn-secondary" id="searchBtn" type="submit">Submit</button>
-        </form>
-        <!-- submit button -->
-        
-    </div>
 
     <div class="third-bg-c">
         <p></p>
