--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" text="text/css" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lily+Script+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frow@3/dist/frow.min.css">
     <script src="https://kit.fontawesome.com/0270abbd8e.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -17,7 +18,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#C9A281">
-  <a class="navbar-brand" href="#">HYGGE HOUSE</a>
+  <a class="navbar-brand" href="index.html">HYGGE HOUSE</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,23 +26,26 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">WHAT WE DO <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">HOME<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link navcolor" href="#">WHO WE ARE</a>
+        <a class="nav-link navcolor" href="whatwedo.html">WHAT WE DO</a>
+      </li>
+      <li class="nav-item">
+            <a class="nav-link" href="#">WHO WE ARE</a>
       </li>
       <li class="nav-item">
             <a class="nav-link" href="#">UPFRONT PRICING</a>
       </li>
       <li class="nav-item">
-            <a class="nav-link" href="#">OUR PROCESS</a>
+            <a class="nav-link navcolor" href="#">OUR PROCESS</a>
       </li>
       <li class="nav-item">
-            <a class="nav-link navcolor" href="#">TIPS AND IDEAS</a>
+            <a class="nav-link" href="#">TIPS AND IDEAS</a>
       </li>
       <li class="nav-item">
-            <a class="nav-link" href="#">CONTACT US</a>
-      </li>
+        <a class="nav-link" href="#">CONTACT US</a>
+  </li>
      
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Action</a>
@@ -63,8 +67,12 @@
         </section>
     </header>
 
-
     <div class="container bg-colortwo">
+        <h1 class="intro">Our Work</h1>
+    </div>
+
+
+    <div class="container">
         <!-- row one -->
         <div class="row">
             <div class="col-md-12">
@@ -117,38 +125,12 @@
             </div>
         </div>
     </div>
-
-    <div class="container-wrapper">
-        <div class="row d-flex justify-content-center">
-
-            <div class="col-md-6">
-                <!-- left side map -->
-                <div class="container-left">
-                    <div>
-                       <p class="left-intro">Hygge Inspiration</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-6">
-                <div class="container-right">
-                    <!-- right side results -->
-                    <p class="right-intro">Meet the Founders</p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-    <div class="third-bg-c">
-        <p></p>
-    </div>
+   
 
    
 
     <!-- footer -->
-    <footer></footer>
+    <footer>HYGGE PRODUCTION HOUSE 2019</footer>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="./app.js"></script>
