updated front image

--- a/index.html
+++ b/index.html
@@ -60,15 +60,18 @@
 </nav>
     <!-- header? -->
     <header>
-        <img src="./tyssul-patel-o-zOatT4kQw-unsplash.jpg" class="headerimg">
+        <img src="./jakob-owens-pwjZvsSk5ao-unsplash.jpg" class="headerimg">
         <section class='hero-header-text' >
             <h1 class="bg-text-1">hygge house</h1>
             <h2 class="bg-text">A North Carolina Video Production House</h2>
         </section>
     </header>
 
-    <div class="container bg-colortwo">
-        <h1 class="intro">Our Work</h1>
+    <div class="frow">
+        <div class="frow row-start"> 
+            <h1 class="intro-side">Our Work</h1>
+        </div>
+        <img class="frow row-end col-md-1-3" src="./jakob-owens-CiUR8zISX60-unsplash.jpg" class="workimg">
     </div>
 
 
